@@ -59,6 +59,7 @@ This release includes the following bugfixes:
  o error when --dump-header - used with more than one URL
  o proxy closing connect during CONNECT with auth with the multi interface
  o CURLOPT_UPLOAD sets HTTP method back to GET or HEAD when passed in a 0
+ o shared cookies could get locked twice
 
 This release includes the following known bugs:
 
